--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/Users/jwalsh4867/Downloads/GTGE/golden_0_2_3.jar"/>
-	<classpathentry kind="lib" path="/Users/jwalsh4867/Downloads/google-gson-2.1/gson-2.1.jar"/>
+	<classpathentry kind="lib" path="Lib/golden_0_2_3.jar"/>
+	<classpathentry kind="lib" path="Lib/gson-2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
