--- a/paraConfig.json
+++ b/paraConfig.json
@@ -1,1 +1,1 @@
-{"ENEMY_NUM":30,"lifeNum":5,"BACKGROUND_SPEED":3,"BLOCK_NUM":1,"BOMB_NUM":5,"BONUS_NUM":20}
+{"BLOCK_NUM":10,"BOMB_NUM":5,"BONUS_NUM":10,"lifeNum":5,"ENEMY_NUM":30,"BACKGROUND_SPEED":1}
