minor changes of key config

--- a/paraConfig.json
+++ b/paraConfig.json
@@ -1,1 +1,1 @@
-{"BLOCK_NUM":10,"BOMB_NUM":5,"BONUS_NUM":10,"lifeNum":5,"ENEMY_NUM":30,"BACKGROUND_SPEED":1}
+{"BACKGROUND_SPEED":1,"BOMB_NUM":5,"BONUS_NUM":100,"BLOCK_NUM":20,"lifeNum":3,"ENEMY_NUM":40}
