--- a/paraConfig.json
+++ b/paraConfig.json
@@ -1,1 +1,1 @@
-{"BACKGROUND_SPEED":1,"BOMB_NUM":5,"BONUS_NUM":100,"BLOCK_NUM":20,"lifeNum":3,"ENEMY_NUM":40}
+{"ENEMY_NUM":100,"BONUS_NUM":10,"lifeNum":5,"BOMB_NUM":10,"BACKGROUND_SPEED":5,"BLOCK_NUM":20}
