--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="Lib/gson-2.1.jar"/>
 	<classpathentry kind="lib" path="Lib/ssj.jar"/>
 	<classpathentry kind="lib" path="Lib/golden_0_2_3.jar"/>
+	<classpathentry kind="lib" path="Lib/joda-time-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
