--- a/paraConfig.json
+++ b/paraConfig.json
@@ -1,1 +1,1 @@
-{"ENEMY_NUM":100,"BONUS_NUM":10,"lifeNum":5,"BOMB_NUM":10,"BACKGROUND_SPEED":5,"BLOCK_NUM":20}
+{"BLOCK_NUM":20,"ENEMY_NUM":100,"BOMB_NUM":10,"BACKGROUND_SPEED":2,"BONUS_NUM":10,"lifeNum":5}
