--- a/keyConfig.json
+++ b/keyConfig.json
@@ -1,1 +1,1 @@
-{"DOWN":40,"FIRE":16,"LEFT":37,"UP":38,"RIGHT":39}
+{"FIRE":16,"RIGHT":39,"SystemUp":38,"LEFT":37,"SystemEnter":10,"UP":38,"SystemDown":40,"SystemEscape":27,"DOWN":40,"SystemRestart":82,"SystemSpace":32}
