Configuration.java deleted and corresponding changes in many places

--- a/paraConfig.json
+++ b/paraConfig.json
@@ -1,1 +1,1 @@
-{"BONUS_NUM":10,"lifeNum":10,"ENEMY_NUM":100,"BLOCK_NUM":20,"BACKGROUND_SPEED":2,"BOMB_NUM":10}
+{"ENEMY_NUM":10,"BONUS_NUM":10,"lifeNum":10,"BOMB_NUM":10,"BACKGROUND_SPEED":2,"BLOCK_NUM":20,"FIGHTER_HP":1}
